@@ -1,3 +1,12 @@
+2000-09-12  Dave Peticolas  <dave@krondo.com>
+
+	* src/engine/Transaction.h: make xaccInitTransaction a private
+	function.
+
+	* src/scm/qif-import/qif-to-gnc.scm: Don't init a new transaction.
+	gnc:transaction-create does this automatically. Doing it again leaks
+	memory.
+
 2000-09-11  Dave Peticolas  <dave@krondo.com>
 
 	* src/gnome/dialog-transfer.c: incorporate amount editing widget
